[gd_scene load_steps=9 format=3 uid="uid://5hygm82fy168"]

[ext_resource type="Script" uid="uid://5bfql4ngr8yu" path="res://scripts/UI_Scripts/pause.gd" id="1_0ep5p"]
[ext_resource type="PackedScene" uid="uid://cn0njjk7bw8dv" path="res://scenes/GameSceneUI/AudioOptions.tscn" id="2_wcpj6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcpj6"]
bg_color = Color(0.497474, 0.497474, 0.497474, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v81o"]
bg_color = Color(0.95158, 0.95158, 0.95158, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hdb6x"]
bg_color = Color(0.960351, 0.960351, 0.960351, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uc2tp"]
bg_color = Color(0.964742, 0.964742, 0.964742, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ep5p"]
bg_color = Color(0.95158, 0.95158, 0.95158, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eh5vw"]
bg_color = Color(0.955963, 0.955963, 0.955963, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0ep5p")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 87.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.960351, 0.960351, 0.960351, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_wcpj6")
text = "||"

[node name="Panel" type="Panel" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 318.0
offset_top = 58.0
offset_right = 825.0
offset_bottom = 631.0

[node name="ContinueButton" type="Button" parent="Panel"]
process_mode = 3
layout_mode = 0
offset_left = 144.0
offset_top = 28.0
offset_right = 342.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_8v81o")
text = "CONTINUE
"

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 145.0
offset_top = 134.0
offset_right = 343.0
offset_bottom = 202.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_hdb6x")
text = "RESTART
"

[node name="MenuButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 148.0
offset_top = 466.0
offset_right = 346.0
offset_bottom = 534.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_uc2tp")
text = "MENU
"

[node name="SoundButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 147.0
offset_top = 358.0
offset_right = 345.0
offset_bottom = 426.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0ep5p")
text = "SOUNDS
"

[node name="SelectLevelButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 144.0
offset_top = 242.0
offset_right = 342.0
offset_bottom = 310.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_eh5vw")
text = "SELECT LEVEL
"

[node name="AudioOptions" parent="Panel" instance=ExtResource("2_wcpj6")]
visible = false
layout_mode = 1
offset_left = -315.0
offset_top = -89.0
offset_right = -315.0
offset_bottom = -89.0

[connection signal="pressed" from="Panel/SoundButton" to="." method="_on_sound_button_pressed"]
